--- a/app-rbac/src/app/app.component.html
+++ b/app-rbac/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<!--<h1>-->
+<!--  Welcome to {{ title }}!-->
+<!--</h1>-->
+<!--<nav>-->
+<!--  <a routerLink="/dashboard">Dashboard</a>-->
+<!--  <a routerLink="/dashboard1">Dashboard1</a>-->
+<!--  <a routerLink="/heroes">Heroes</a>-->
+<!--</nav>-->
+<!--<router-outlet></router-outlet>-->
+<!--<app-messages></app-messages>-->
