--- a/app-rbac/src/app/containers/default-layout/default-layout.component.html
+++ b/app-rbac/src/app/containers/default-layout/default-layout.component.html
@@ -6,15 +6,15 @@
   [sidebarToggler]="'lg'"
   [asideMenuToggler]="'lg'">
   <ul class="nav navbar-nav d-md-down-none">
-    <li class="nav-item px-3">
-      <a class="nav-link" href="#">Dashboard</a>
-    </li>
-    <li class="nav-item px-3">
-      <a class="nav-link" href="#">Users</a>
-    </li>
-    <li class="nav-item px-3">
-      <a class="nav-link" href="#">Settings</a>
-    </li>
+<!--    <li class="nav-item px-3">-->
+<!--      <a class="nav-link" href="#">Dashboard</a>-->
+<!--    </li>-->
+<!--    <li class="nav-item px-3">-->
+<!--      <a class="nav-link" href="#">Users</a>-->
+<!--    </li>-->
+<!--    <li class="nav-item px-3">-->
+<!--      <a class="nav-link" href="#">Settings</a>-->
+<!--    </li>-->
   </ul>
   <ul class="nav navbar-nav ml-auto">
     <li class="nav-item d-md-down-none">
